# HFT-DataPipeline

./: CMakeLists.txt  README.md
include/: LockFreeQueue.hpp  MarketData.hpp  Parser.hpp  Processor.hpp  ZeroMQReceiver.hpp
scripts/: mock_feed.py
src/: FetchData.cpp  MarketData.cpp  Parser.cpp  Processor.cpp  ZeroMQReceiver.cpp  data  main.cpp
